--- a/mpgrande/app/templates/app/create_staff.html
+++ b/mpgrande/app/templates/app/create_staff.html
@@ -37,8 +37,8 @@
             
                 }
             </script>
-            <form method="POST">
-                <div class="form-group">
+            <form method="POST"  class="container2">
+                <div class="form1">
                 <table class="table table-bordered"> 
                     {% load permission_tags %}
                         {% if personal  %}    
