--- a/mpgrande/app/templates/app/create_request.html
+++ b/mpgrande/app/templates/app/create_request.html
@@ -19,7 +19,7 @@
     
         <form method="POST" class="container2">
             <div class="form1">
-                {% csrf_token %} <!--validar -->
+                {% csrf_token %}
                 {{ from_solicitud}}
                 <input class="btn btn-default" type="submit" value="Listo"> 
                 <script>
