--- a/mpgrande/app/templates/app/list_request.html
+++ b/mpgrande/app/templates/app/list_request.html
@@ -9,17 +9,10 @@
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
 
-<div class="container">
-    <div class="col-md-7 col-md-offset-3 form-box">
-        <h2>Lista de solicitudes disponibles</h2>
-        
-       
-
-
-
-
-        <form method="POST">
-            <div class="form-group">
+<body>
+    <h2>Lista de solicitudes disponibles</h2>
+        <form method="POST" class="container2">
+            <div class="form1">
         
                 <script>
                     function eliminarSolicitud(id){
@@ -43,106 +36,82 @@
                     }
                 
                 </script>
-                
-                
-                        <hr width="50%">
-                        {% if  user|has_role:'productor' %} 
-
-                          
-                        
-                        {% endif %}   
-                        
-                        <form method="POST">
-                            <div class="form-group">
-                                &nbsp; 
-                            <table class="table table-bordered">
-                
+                {% if  user|has_role:'productor' %} 
+                {% endif %}   
+                <form method="POST" class="container2">
+                    <div class="form1">
+                        <table class="table table-bordered"> 
+                            <tbody>
+                                <tr>
+                                    <th>id</th>
+                                    <th>Usuario</th>
+                                    <th>Estado</th>
+                                    <th>Fruta  1</th>
+                                    <th>Fruta  2</th>
+                                    <th>Fruta  3</th>
+                                    <th>Opciones</th>
+                                </tr>
+                            {% if solicitudes  %}    
+                            {% for p in solicitudes %}                      
+                                {% if p.usuario_fk.username == user.username or user|has_role:'moderador' %} 
+                                        <tr>
+                                            <td> {{ p.id }} </td>
+                                            <td>{{ p.usuario_fk  }}</td>
+                                            <td>{{ p.fk_estado_solicitud  }}</td>
+                                            <td>{{ p.nombre_fruta_espacio1  }} {{ p.kilos_fruta_espacio1 }} Kilos </td>
+                                            <td>{{ p.nombre_fruta_espacio2  }} {{ p.kilos_fruta_espacio2 }} Kilos </td>
+                                            <td>{{ p.nombre_fruta_espacio3  }} {{ p.kilos_fruta_espacio3 }} Kilos </td>
+                                            <td>
+                                                {% if p.usuario_fk.username == user.username %}
+    
+                                                <a href="{%  url 'modify_request' p.id %}" class="btn btn-info btn-sm ">Modificar</a>
+                                                <a href="#" onclick="eliminarSolicitud({{ p.id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
+                                                {% endif %}
+                                                
+    
+                                                {% if user|has_role:'moderador' %}
+                                                <a href="{%  url 'modify_request_status' p.id %}" class="btn btn-info btn-sm ">Aprobar/Denegar</a>
+                                                {% endif %}
+    
+                                                {% if p.fk_estado_solicitud.desc_estado_solicitud  == "Aprobado" and user|has_role:'productor'  %}
+                                                <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
+                                                {% endif %}
+                                            </td>
+                                        </tr>
+                                {% endif %}   
                                 
-                                <tbody>
-                                    <tr>
-                                        <th>id</th>
-                                        <th>Usuario</th>
-                                        <th>Estado</th>
-                                        <th>Fruta  1</th>
-                                        <th>Fruta  2</th>
-                                        <th>Fruta  3</th>
-                                        <th>Opciones</th>
-                                        
-                                    </tr>
-                                
-                                
-                                {% if solicitudes  %}    
-                                {% for p in solicitudes %}  
-                                
-
-                                    {% if p.usuario_fk.username == user.username or user|has_role:'moderador' %} 
-                                            <tr>
-                                                <td> {{ p.id }} </td>
-                                                <td>{{ p.usuario_fk  }}</td>
-                                                <td>{{ p.fk_estado_solicitud  }}</td>
-                                                <td>{{ p.nombre_fruta_espacio1  }} {{ p.kilos_fruta_espacio1 }} Kilos </td>
-                                                <td>{{ p.nombre_fruta_espacio2  }} {{ p.kilos_fruta_espacio2 }} Kilos </td>
-                                                <td>{{ p.nombre_fruta_espacio3  }} {{ p.kilos_fruta_espacio3 }} Kilos </td>
-                                        
-                                                <td>
-                                                    
-                                                    
-
-                                                    {% if p.usuario_fk.username == user.username %}
-
-                                                    <a href="{%  url 'modify_request' p.id %}" class="btn btn-info btn-sm ">Modificar</a>
-                                                    <a href="#" onclick="eliminarSolicitud({{ p.id }})  " class="btn btn-danger btn-sm ">Eliminar</a>
-                                                    {% endif %}
-                                                    
-
-                                                    {% if user|has_role:'moderador' %}
-                                                    <a href="{%  url 'modify_request_status' p.id %}" class="btn btn-info btn-sm ">Aprobar/Denegar</a>
-                                                    {% endif %}
-
-                                                    {% if p.fk_estado_solicitud.desc_estado_solicitud  == "Aprobado" and user|has_role:'productor'  %}
-                                                    <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
-                                                    {% endif %}
-                                                        
-
-                                                </td>
-                                            </tr>
-                                    {% endif %}   
-                                    
-                                    {% if  user|has_role:'productor' %} 
-                                    <tr>
-                                        <td> {{ p.id }} </td>
-                                        <td>{{ p.usuario_fk  }}</td>
-                                        <td>{{ p.fk_estado_solicitud  }}</td>
-                                        <td>{{ p.nombre_fruta_espacio1  }} {{ p.kilos_fruta_espacio1 }} Kilos </td>
-                                        <td>{{ p.nombre_fruta_espacio2  }} {{ p.kilos_fruta_espacio2 }} Kilos </td>
-                                        <td>{{ p.nombre_fruta_espacio3  }} {{ p.kilos_fruta_espacio3 }} Kilos </td>
-                                        
-                                        <td>
-
-                                            {% if user|has_role:'administrador' %}
-                                            <a href="{%  url 'modify_request_status' p.id %}" class="btn btn-info btn-sm ">Aprobar/Denegar</a>
-                                            <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
-                                            {% endif %}
-
-                                            {% if p.fk_estado_solicitud.desc_estado_solicitud  == "Aprobado" and user|has_role:'productor'  %}
-                                            <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
-                                            {% endif %}
-
-                                        </td>
-                                    </tr>
-                                    {% endif %}            
-                                {% endfor %} 
-                                
-                                {% else %}
-                                <h3>No hay registros</h3>
-                                {% endif %}
-                                </tbody>
-                
+                                {% if  user|has_role:'productor' %} 
+                                <tr>
+                                    <td> {{ p.id }} </td>
+                                    <td>{{ p.usuario_fk  }}</td>
+                                    <td>{{ p.fk_estado_solicitud  }}</td>
+                                    <td>{{ p.nombre_fruta_espacio1  }} {{ p.kilos_fruta_espacio1 }} Kilos </td>
+                                    <td>{{ p.nombre_fruta_espacio2  }} {{ p.kilos_fruta_espacio2 }} Kilos </td>
+                                    <td>{{ p.nombre_fruta_espacio3  }} {{ p.kilos_fruta_espacio3 }} Kilos </td>
+                                    <td>
+    
+                                        {% if user|has_role:'administrador' %}
+                                        <a href="{%  url 'modify_request_status' p.id %}" class="btn btn-info btn-sm ">Aprobar/Denegar</a>
+                                        <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
+                                        {% endif %}
+    
+                                        {% if p.fk_estado_solicitud.desc_estado_solicitud  == "Aprobado" and user|has_role:'productor'  %}
+                                        <a href="{%  url 'producer_create_request' p.id %}" class="btn btn-info btn-sm ">Crear lote</a>
+                                        {% endif %}
+    
+                                    </td>
+                                </tr>
+                                {% endif %}            
+                            {% endfor %} 
+                            
+                            {% else %}
+                            <h3>No hay registros</h3>
+                            {% endif %}
+                            </tbody>
                         </table> 
-                 </div>         
+                    </div>
+                </form>                
             </div>
         </form>
-    </div>
-</div>
-
+</body>
 {% endblock content %}
