--- a/mpgrande/app/templates/app/modify_post_product.html
+++ b/mpgrande/app/templates/app/modify_post_product.html
@@ -9,24 +9,15 @@
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
 
-<div class="container">
-    <div class="container-fluid p-0 col-md-8 col-md-offset-2 col-sm-12 form-box">
-        <h2>Modificar producto</h2>
-        <hr width="30%">
-        <form method="POST">
-            <div class="form-group">
-            
-                {% csrf_token %} <!--validar -->
-
-                {{ from_producto.as_bootstrap }}
-
-                <input class="btn btn-default" type="submit" value="Modificar producto">
-
-                
-            </div>
-                   
-        </form>
-    </div>
-</div>
+<body>
+    <h2>Modificar producto</h2>
+    <form method="POST" class="container2">
+        <div class="form1">
+            {% csrf_token %}
+            {{ from_producto}}
+            <input class="button" type="submit" value="Modificar producto">
+        </div>       
+    </form>
+</body>
 
 {% endblock content %}
