--- a/mpgrande/app/templates/app/producer_create_request.html
+++ b/mpgrande/app/templates/app/producer_create_request.html
@@ -9,123 +9,97 @@
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
 
-<div class="container">
-    <div class="col-md-10 col-md-offset-1 form-box">
-        <h2>Crear solicitud del cliente  👥</h2>
+<body>
+    <h2>Crear solicitud del cliente</h2>
+    <form method="POST" class="container2">
+        <div class="form1">
 
-        <hr width="30%">
-        <form method="POST">
-            <div class="form-group">
+            <h3>Mis productos  </h3>      
+            {% csrf_token %}  
+           <h4>Espacio fruta 1 : </h4> {{ from_solicitud.fk_frutas_espacio1 }}
+           <h4>Espacio fruta 2 : </h4> {{ from_solicitud.fk_frutas_espacio2 }}
+           <h4>Espacio fruta 3 : </h4> {{ from_solicitud.fk_frutas_espacio3 }}
 
-                <h3>Mis productos  </h3>     
-                &nbsp;  
-               
-                {% csrf_token %}  
+           
+            {% for p in productos %} 
 
-
-               <h4>Espacio fruta 1 : </h4> {{ from_solicitud.fk_frutas_espacio1 }}
-               <h4>Espacio fruta 2 : </h4> {{ from_solicitud.fk_frutas_espacio2 }}
-               <h4>Espacio fruta 3 : </h4> {{ from_solicitud.fk_frutas_espacio3 }}
-
-               
-                {% for p in productos %} 
-
-                    {% if  p.usuario_fk.username == user.username %}
+                {% if  p.usuario_fk.username == user.username %}
+        
+                {% endif %}
             
-                    {% endif %}
-                
-                {% endfor %}       
+            {% endfor %}       
 
-                
+            
 
 
-                <input class="btn btn-default" type="submit" value="Crear solicitud">
+            <input class="btn btn-default" type="submit" value="Crear solicitud">
 
-                
+            
 
-                <hr width="50%"> 
+            <hr width="50%"> 
 
-                <script>
-                    function eliminarSolicitud(id){
-                        Swal.fire({
-                        "title": '¿Estás seguro?',
-                        "text": "Una vez borrado no se podrá recuperar",
-                        "icon": 'warning ',
-                        "showCancelButton": true,
-                        "confirmButtonColor": '#3085d6',
-                        "cancelButtonColor": '#d33',
-                        "cancelButtonText":"No, Cancelar", 
-                        "confirmButtonText": 'Si, Eliminar',
-                        "reverseButtons":true  
-                
-                        }).then(function(result) {
-                            if (result.isConfirmed) {
-                            window.location.href = "/delete_request/"+id+"/"
-                        }
-                        })
-                
+            <script>
+                function eliminarSolicitud(id){
+                    Swal.fire({
+                    "title": '¿Estás seguro?',
+                    "text": "Una vez borrado no se podrá recuperar",
+                    "icon": 'warning ',
+                    "showCancelButton": true,
+                    "confirmButtonColor": '#3085d6',
+                    "cancelButtonColor": '#d33',
+                    "cancelButtonText":"No, Cancelar", 
+                    "confirmButtonText": 'Si, Eliminar',
+                    "reverseButtons":true  
+            
+                    }).then(function(result) {
+                        if (result.isConfirmed) {
+                        window.location.href = "/delete_request/"+id+"/"
                     }
-                
-                </script>
-                
-                <h2>Solicitud a crear </h2>
-                        <hr width="50%">
-                        <form method="POST">
-                            <div class="form-group">
-                        
-                            <table class="table table-bordered">
-                
-                               
-                                
-                                <tbody>
-                                    <tr>
-                                        <th>id</th>
-                                        <th>Cliente</th>
-                                        <th>Estado</th>
-                                        <th>Fruta espacio 1</th>
-                                        <th>Fruta espacio 2</th>
-                                        <th>Fruta espacio 3</th>
-                                       
-                                       
-                                        
-                                    </tr>
-                                
-                                
-                                {% if solicitudes  %}    
-                                {% for p in solicitudes %} 
-                                {% if p.id == id_solicitud.id %} 
+                    })
+            
+                }
+            
+            </script>
+            
+            <h2>Solicitud a crear </h2>
+            <form method="POST" class="container2">
+                <div class="form1">
+                    <table class="table table-bordered">  
+                        <tbody>
+                            <tr>
+                                <th>id</th>
+                                <th>Cliente</th>
+                                <th>Estado</th>
+                                <th>Fruta espacio 1</th>
+                                <th>Fruta espacio 2</th>
+                                <th>Fruta espacio 3</th>  
+                            </tr>
+                        {% if solicitudes  %}    
+                        {% for p in solicitudes %} 
+                        {% if p.id == id_solicitud.id %} 
 
-                                    <tr>
-                                        <td> {{ p.id }} </td>
-                                        <td>{{ p.usuario_fk  }}</td>
-                                        <td>{{ p.fk_estado_solicitud.desc_estado_solicitud  }}</td>
-                                        <td>{{ p.nombre_fruta_espacio1  }} {{ p.kilos_fruta_espacio1 }} Kilos </td>
-                                         <td>{{ p.nombre_fruta_espacio2  }} {{ p.kilos_fruta_espacio2 }} Kilos </td>
-                                        <td>{{ p.nombre_fruta_espacio3  }} {{ p.kilos_fruta_espacio3 }} Kilos </td>
-                                        
-
-
-
-
-                                      
-                                    </tr>
-                                {% endif %}    
-                                {% endfor %}     
-                                {% else %}
-                                <h3>No hay registros</h3>
-                                {% endif %}
-                                </tbody>
-                
-                            </table> 
-                       
-                                
-                    
-                
+                            <tr>
+                                <td> {{ p.id }} </td>
+                                <td>{{ p.usuario_fk  }}</td>
+                                <td>{{ p.fk_estado_solicitud.desc_estado_solicitud  }}</td>
+                                <td>{{ p.nombre_fruta_espacio1  }} {{ p.kilos_fruta_espacio1 }} Kilos </td>
+                                 <td>{{ p.nombre_fruta_espacio2  }} {{ p.kilos_fruta_espacio2 }} Kilos </td>
+                                <td>{{ p.nombre_fruta_espacio3  }} {{ p.kilos_fruta_espacio3 }} Kilos </td>
+                            </tr>
+                        {% endif %}    
+                        {% endfor %}     
+                        {% else %}
+                        <h3>No hay registros</h3>
+                        {% endif %}
+                        </tbody>
+                    </table>     
+                </div>
+            </form>
+                      
+        </div>
+    </form>
 
 
-            </div>
-        </form>
-    </div>
-</div>
-
+        
+</body>
 {% endblock content %}
