--- a/mpgrande/app/templates/app/sales_list.html
+++ b/mpgrande/app/templates/app/sales_list.html
@@ -8,117 +8,78 @@
 {%block css%} 
 <link rel="stylesheet" href="{% static '/css/base.css'%}">
 {%endblock%} 
-<div class="container">
-    <div class="col-md-7 col-md-offset-3 form-box">
-        <h2>Mis ventas</h2>
-        
-        <form method="POST">
-            <div class="form-group">
-        
-                <script>
-                    function eliminarSolicitud(id){
-                        Swal.fire({
-                        "title": '¿Estás seguro?',
-                        "text": "Una vez borrado no se podrá recuperar",
-                        "icon": 'warning ',
-                        "showCancelButton": true,
-                        "confirmButtonColor": '#3085d6',
-                        "cancelButtonColor": '#d33',
-                        "cancelButtonText":"No, Cancelar", 
-                        "confirmButtonText": 'Si, Eliminar',
-                        "reverseButtons":true  
-                
-                        }).then(function(result) {
-                            if (result.isConfirmed) {
-                            window.location.href = "/delete_request/"+id+"/"
-                        }
-                        })
-                
-                    }
-                
-                </script>
-                
-              
-                        <hr width="50%">
-                        <form method="POST">
-                            <div class="form-group">
-                        
-                            <table class="table table-bordered">
-                
-                               
-                
-                                <tbody>
-                                    <tr>
-                                        <th>id</th>
-                                        <th>fecha</th>
-                                        <th>Estado</th>
-                                        <th>Productor</th>
-                                        <th>Subasta</th>
-                                       
-                                        <th>Valor Subasta</th>
-                                        <th>Opciones</th>
-                                        
-                                    </tr>
-                                
-                                
-                                {% if ventas  %}    
-                                {% for p in ventas %}  
-                                {% load permission_tags %}
-
-                                    {% if p.usuario_fk.username == user.username or user|has_role:'administrador' %} 
-                                            <tr>
-                                                <td> {{ p.id }} </td>
-                                                <td>{{ p.fec_venta  }}</td>
-                                                <td>{{ p.fk_estado_venta  }}</td>
-                                                <td>{{ p.fk_subasta.fk_solicitud.usuario_fk  }}</td>
-                                                <td>{{ p.fk_subasta.fk_solicitud  }}</td>
-                                               
-                                                <td>{{ p.fk_subasta.mi_apuesta  }}</td>
-                                                <td>
-                                                    
-
-
-                                                    {% if user|has_role:'administrador' or p.usuario_fk.username == user.username and p.fk_estado_venta.estado_venta == "Venta en curso"%}
-
-                                                    <a href="{%  url 'create_ticket' p.id %}" class="btn btn-info btn-sm ">Crear boleta</a>
-                                                    
-                                                    {% endif %}
-                                                    
-
-                                                    {% if user|has_role:'administrador' or p.usuario_fk.username == user.username and p.fk_estado_venta.estado_venta == "Venta terminada"%}
-
-                                                    <a href="{%  url 'confirm_delivery' p.id %}" class="btn btn-info btn-sm "> Confirmar entrega </a>
-                                                    
-                                                    {% endif %}
-
-
-
-                                                </td>
-                                            </tr>
-                                    {% endif %}   
-                                    
-                                    
-                                   
-                                    
-                                     
-                                {% endfor %} 
-                                
-                                
-                                
-                                {% else %}
-                                <h3>No hay registros</h3>
-                                {% endif %}
-                                </tbody>
-                
-                            </table> 
-                           
-                
+<body>
+    <h2>Mis ventas</h2>
+    <form method="POST" class="container2">
+        <div class="form1">
     
+            <script>
+                function eliminarSolicitud(id){
+                    Swal.fire({
+                    "title": '¿Estás seguro?',
+                    "text": "Una vez borrado no se podrá recuperar",
+                    "icon": 'warning ',
+                    "showCancelButton": true,
+                    "confirmButtonColor": '#3085d6',
+                    "cancelButtonColor": '#d33',
+                    "cancelButtonText":"No, Cancelar", 
+                    "confirmButtonText": 'Si, Eliminar',
+                    "reverseButtons":true  
+            
+                    }).then(function(result) {
+                        if (result.isConfirmed) {
+                        window.location.href = "/delete_request/"+id+"/"
+                    }
+                    })
+            
+                }
+            
+            </script>
+            <form method="POST" class="container2" >
+                <div class="form1">
+                    <table class="table table-bordered">
+                        <tbody>
+                            <tr>
+                                <th>id</th>
+                                <th>fecha</th>
+                                <th>Estado</th>
+                                <th>Productor</th>
+                                <th>Subasta</th>
+                                <th>Valor Subasta</th>
+                                <th>Opciones</th>
+                            </tr>
+                        {% if ventas  %}    
+                        {% for p in ventas %}  
+                        {% load permission_tags %}
 
-      
-            </div>
-        </form>
-    </div>
-</div>
+                            {% if p.usuario_fk.username == user.username or user|has_role:'administrador' %} 
+                                    <tr>
+                                        <td> {{ p.id }} </td>
+                                        <td>{{ p.fec_venta  }}</td>
+                                        <td>{{ p.fk_estado_venta  }}</td>
+                                        <td>{{ p.fk_subasta.fk_solicitud.usuario_fk  }}</td>
+                                        <td>{{ p.fk_subasta.fk_solicitud  }}</td>
+                                        <td>{{ p.fk_subasta.mi_apuesta  }}</td>
+                                        <td>
+                                            {% if user|has_role:'administrador' or p.usuario_fk.username == user.username and p.fk_estado_venta.estado_venta == "Venta en curso"%}
+                                            <a href="{%  url 'create_ticket' p.id %}" class="btn btn-info btn-sm ">Crear boleta</a>
+                                            {% endif %}
+                                            {% if user|has_role:'administrador' or p.usuario_fk.username == user.username and p.fk_estado_venta.estado_venta == "Venta terminada"%}
+                                            <a href="{%  url 'confirm_delivery' p.id %}" class="btn btn-info btn-sm "> Confirmar entrega </a>
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                            {% endif %}   
+                        {% endfor %} 
+                        {% else %}
+                        <h3>No hay registros</h3>
+                        {% endif %}
+                        </tbody>
+                    </table> 
+                </div>
+            </form>               
+        </div>
+    </form>
+</body>
 
 {% endblock content %}
