--- a/mpgrande/app/templates/app/create_staff.html
+++ b/mpgrande/app/templates/app/create_staff.html
@@ -15,7 +15,7 @@
         <div class="form1" >
             {% csrf_token %} <!--validar -->
             {{ from_personal}}
-            <input class="btn btn-default" type="submit" value="Crear Personal">
+            <input class="button" type="submit" value="Crear Personal">
             <script>
                 function eliminarPersonal(id){
                     Swal.fire({
