--- a/mpgrande/app/templates/registration/login.html
+++ b/mpgrande/app/templates/registration/login.html
@@ -6,18 +6,18 @@
 
 
 {%block css%} 
-<link rel="stylesheet" href="{% static 'app/css/register.css'%}">
-<script src="https://kit.fontawesome.com/aaf2b92d6f.js"></script>
+<link rel="stylesheet" href="{% static '/css/register.css'%}">
+
 {%endblock%}
 <body>
     {% load crispy_forms_tags%}
-        <form method="post" class=" formulario contenedor input-contenedor">
-            <h1>Bienvenid@,<br> inicia tu sesión.</h1>
+        <form method="POST" class=" formulario contenedor input-contenedor">
+            <h1 class="titleh1">Bienvenid@, porfavor inicia tu sesión</h1>
             {% csrf_token %}
-            {{form | crispy}}
+            {{form}}
             <input type="submit" value="Ingresar" class="button"> 
-            <p>¿No tienes una cuenta? <a class="link" href="{% url 'register' %}">Registrate </a></p> 
-            <a class="link" href="{% url 'home' %}">Ir al inicio </a></p> 
+            <p>¿No tienes una cuenta? <a class="link" href="/message_register"> <br>Crea tu solicitud de registro aquí</a> <a class="link" href="{% url 'home' %}"> <br> Volver al inicio </a></p> 
+            
         </form>
    </body>
 {% endblock %}
