--- a/mpgrande/app/templates/app/home.html
+++ b/mpgrande/app/templates/app/home.html
@@ -1,4 +1,4 @@
-{% extends 'base/header.html' %}
+% extends 'base/base.html' %}
 
 
 {%load static%} 
@@ -14,7 +14,7 @@
     <div class="container-form">
         <div class="welcome-back">
             <div class="message">
-                <h3>Bienvenid@ a su Feria Virtual</h3>
+                <h2>Bienvenid@ a su </h2> <h3>Feria Virtual</h3>
             </div>
         </div>
     </div>
