--- a/mpgrande/app/templates/registration/register.html
+++ b/mpgrande/app/templates/registration/register.html
@@ -6,19 +6,23 @@
 
 
 {%block css%} 
-<link rel="stylesheet" href="{% static '/css/register.css'%}">
-
+<link rel="stylesheet" href="{% static 'app/css/register.css'%}">
+<script src="https://kit.fontawesome.com/aaf2b92d6f.js"></script>
 {%endblock%}
 <body>
-    <form method="post" class=" formulario contenedor input-contenedor">
-        <h1 class="titleh1">Crear una cuenta</h1>
-        {% csrf_token %}
-            {{ form }}
-        <input class="button" type="submit" value="Crear usuario">
-        <p><a class="link" href="{% url 'home' %}"> <br> Volver al inicio </a></p> 
-    </form>
-    
-        
-</body>
+    {% load crispy_forms_tags%}
 
+    <form method="post" class=" formulario contenedor input-contenedor">
+        <h1>Bienvenid@,<br> registra tus datos.</h1>
+
+        {% csrf_token %}
+        {{form | crispy}}
+        
+    <input type="submit" value="Registrar" class="button"> 
+    <p>Al registrarte, aceptas nuestras Condiciones de uso y Política de privacidad.</p>
+    <p>¿Ya tienes una cuenta? <a class="link" href="{% url 'login' %}">Inicia sesión </a></p>
+    <a class="link" href="{% url 'home' %}">Ir al inicio </a></p> 
+    </form>     
+
+   </body>
 {% endblock %}
